--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![Design preview for the Bookmark landing page coding challenge](preview.jpg)",
   "main": "script.js",
   "scripts": {
-    "dev": "npx @tailwindcss/cli -i style.css -o src/output.css --watch"
+    "dev": "npx tailwindcss -i ./style.css -o ./src/output.css --watch"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/Star-Mdakane/bookmark-landing-page-tailwindcss/issues"
   },
-  "homepage": "https://github.com/Star-Mdakane/bookmark-landing-page-tailwindcss#readme"
+  "homepage": "https://github.com/Star-Mdakane/bookmark-landing-page-tailwindcss#readme",
+  "devDependencies": {
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1"
+  }
 }
